--- a/views/register.html
+++ b/views/register.html
@@ -11,23 +11,25 @@
     <div class="main_heading">Bingo Game</div>
 
     <div class="container">
+
         <div class="row">
             <div class="form_bg">
-                <form>
+
+                <form action="/register/submit" method="post">
                     <h2 class="text-center">Register</h2>
                     <br/>
                     <div class="form-group">
-                        <input type="name" class="form-control" id="name" placeholder="Name">
+                        <input type="text" class="form-control" name="userName" placeholder="Name">
                     </div>
                     <div class="form-group">
-                        <input type="username" class="form-control" id="userName" placeholder="User Name">
+                        <input type="text" class="form-control" name="userId" placeholder="User Name">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" class="form-control" name="password" placeholder="Password">
                     </div>
                     <br/>
                     <div class="align-center">
-                        <button type="submit" class="btn btn-default" id="login">Submit</button>
+                        <button type="submit" class="btn btn-default" id="submit">Submit</button>
                     </div>
                 </form>
             </div>
