html to ejs converted: ;

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="form_bg">
-                    <form action="/login" method="post">
+                    <form action="/login?uid=mohitreddy1996" method="post">
                         <h2 class="text-center">Login Page</h2>
                         <br/>
                         <div class="form-group">
