--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,13 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript">
+            function get_action(form) {
+                form.action =  "/login?uid=" + document.getElementById("userId").value;
+            }
+        </script>
+
     </head>
     <body>
         <div class="main_heading">Bingo Game</div>
@@ -12,11 +19,11 @@
         <div class="container">
             <div class="row">
                 <div class="form_bg">
-                    <form action="/login?uid=mohitreddy1996" method="post">
+                    <form onsubmit="get_action(this);" method="post" name="login_form">
                         <h2 class="text-center">Login Page</h2>
                         <br/>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="userId" placeholder="User id">
+                            <input id="userId" type="text" class="form-control" name="userId" placeholder="User id">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" name="password" placeholder="Password">
