--- a/views/challenge_comp.ejs
+++ b/views/challenge_comp.ejs
@@ -5,6 +5,16 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript">
+            function getUserId() {
+                var url = window.location.href;
+                return url.substring(url.indexOf("=")+1, url.length);
+            }
+            function playUrl(form) {
+                form.action = "/play?uid=" + getUserId();
+            }
+        </script>
     </head>
 
     <body>
@@ -13,7 +23,7 @@
         </h3>
 
         <div class="container">
-            <form>
+            <form onsubmit="playUrl(this);" method="post">
                 <div class="row">
                     <div class="col-md-1">
                         <div class="form-group">
@@ -154,7 +164,9 @@
                     </div>
                 </div>
 
-
+                <div class="col-md-6" align="right">
+                    <button type="submit" class="btn btn-default" id="submit">Confirm, Lets play!</button>
+                </div>
             </form>
         </div>
 
