--- a/views/play.ejs
+++ b/views/play.ejs
@@ -5,10 +5,138 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript">
+
+        </script>
     </head>
 
     <body>
         <h2>Game Play!</h2>
         <p>- May have to use ajax, responsive html.</p>
+
+        <div class="container">
+            <form>
+                <div class="row">
+                    <div class="col-md-1">
+                            <input id="value1" type="radio" class="form-control" name="bingo">
+                            <label for="value1"><%= value1 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value2" type="radio" class="form-control" name="bingo">
+                            <label for="value2"><%= value2 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value3" type="radio" class="form-control" name="bingo">
+                            <label for="value3"><%= value3 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value4" type="radio" class="form-control" name="bingo">
+                            <label for="value4"><%= value4 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value5" type="radio" class="form-control" name="bingo">
+                            <label for="value5"><%= value5 %></label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                            <input id="value6" type="radio" class="form-control" name="bingo">
+                            <label for="value6"><%= value6 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value7" type="radio" class="form-control" name="bingo">
+                            <label for="value7"><%= value7 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value8" type="radio" class="form-control" name="bingo">
+                            <label for="value8"><%= value8 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value9" type="radio" class="form-control" name="bingo">
+                            <label for="value9"><%= value9 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value10" type="radio" class="form-control" name="bingo">
+                            <label for="value10"><%= value10 %></label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                            <input id="value11" type="radio" class="form-control" name="bingo">
+                            <label for="value11"><%= value11 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value12" type="radio" class="form-control" name="bingo">
+                            <label for="value12"><%= value12 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value13" type="radio" class="form-control" name="bingo">
+                            <label for="value13"><%= value13 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value14" type="radio" class="form-control" name="bingo">
+                            <label for="value14"><%= value14 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value15" type="radio" class="form-control" name="bingo">
+                            <label for="value15"><%= value15 %></label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                            <input id="value16" type="radio" class="form-control" name="bingo">
+                            <label for="value16"><%= value16 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value17" type="radio" class="form-control" name="bingo" >
+                            <label for="value17"><%= value17 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value18" type="radio" class="form-control" name="bingo">
+                            <label for="value18"><%= value18 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value19" type="radio" class="form-control" name="bingo">
+                            <label for="value19"><%= value19 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value20" type="radio" class="form-control" name="bingo">
+                            <label for="value20"><%= value20 %></label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                            <input id="value21" type="radio" class="form-control" name="bingo">
+                            <label for="value21"><%= value21 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value22" type="radio" class="form-control" name="bingo">
+                        <label for="value22"><%= value22 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value23" type="radio" class="form-control" name="bingo">
+                        <label for="value23"><%= value23 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value24" type="radio" class="form-control" name="bingo">
+                        <label for="value24"><%= value24 %></label>
+                    </div>
+                    <div class="col-md-1">
+                            <input id="value25" type="radio" class="form-control" name="bingo">
+                        <label for="value25"><%= value25 %></label>
+                    </div>
+                </div>
+            </form>
+
+
+
+            <h2 id="results"></h2>
+
+        </div>
     </body>
 </html>
