User Comp changes made

--- a/views/challenge_comp.ejs
+++ b/views/challenge_comp.ejs
@@ -12,7 +12,7 @@
                 return url.substring(url.indexOf("=")+1, url.length);
             }
             function playUrl(form) {
-                form.action = "/play?uid=" + getUserId();
+                form.action = "/challenge_comp/play?uid=" + getUserId();
             }
         </script>
     </head>
